{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 1728,
  "lineage": "2b852eba-1982-077c-e8fd-44e7408171ee",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:870477136789:security-group/sg-0ef53ef48589c792d",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0ef53ef48589c792d",
            "ingress": [],
            "name": "eks-cluster-cluster-2025111414425605830000000a",
            "name_prefix": "eks-cluster-cluster-",
            "owner_id": "870477136789",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-cluster-cluster"
            },
            "tags_all": {
              "Name": "eks-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c422b619593ce42b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:870477136789:security-group/sg-0255a690109bf8dd2",
            "description": "EKS node group security group - used by nodes to communicate with the cluster API Server",
            "egress": [],
            "id": "sg-0255a690109bf8dd2",
            "ingress": [],
            "name": "eks-cluster-node-20251114144256057400000008",
            "name_prefix": "eks-cluster-node-",
            "owner_id": "870477136789",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-cluster-node",
              "kubernetes.io/cluster/eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "eks-cluster-node",
              "kubernetes.io/cluster/eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c422b619593ce42b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-260130970",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ef53ef48589c792d",
            "security_group_rule_id": "sgr-007fecff5de9d2205",
            "self": false,
            "source_security_group_id": "sg-0255a690109bf8dd2",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-434263814",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0255a690109bf8dd2",
            "security_group_rule_id": "sgr-0dafac148b6d944bf",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1174254469",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0255a690109bf8dd2",
            "security_group_rule_id": "sgr-0b9984ab0e2215d90",
            "self": false,
            "source_security_group_id": "sg-0ef53ef48589c792d",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-4169182294",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0255a690109bf8dd2",
            "security_group_rule_id": "sgr-0e2d12234d13e69f1",
            "self": false,
            "source_security_group_id": "sg-0ef53ef48589c792d",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-834849728",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0255a690109bf8dd2",
            "security_group_rule_id": "sgr-07ec33303673af6ec",
            "self": false,
            "source_security_group_id": "sg-0ef53ef48589c792d",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-580843489",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0255a690109bf8dd2",
            "security_group_rule_id": "sgr-0237601cfacc26540",
            "self": false,
            "source_security_group_id": "sg-0ef53ef48589c792d",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1178584106",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0255a690109bf8dd2",
            "security_group_rule_id": "sgr-0e2ca7cd8a9575c97",
            "self": false,
            "source_security_group_id": "sg-0ef53ef48589c792d",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1694195084",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0255a690109bf8dd2",
            "security_group_rule_id": "sgr-04d19f85d096aee5d",
            "self": false,
            "source_security_group_id": "sg-0ef53ef48589c792d",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-574998247",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0255a690109bf8dd2",
            "security_group_rule_id": "sgr-08aaf665b7bcac7ea",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3505129880",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0255a690109bf8dd2",
            "security_group_rule_id": "sgr-0cb68e94b83f551bb",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1957931639",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0255a690109bf8dd2",
            "security_group_rule_id": "sgr-0c546cc22b7671f5c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:870477136789:network-acl/acl-04f62e56a711cb07d",
            "default_network_acl_id": "acl-04f62e56a711cb07d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-04f62e56a711cb07d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "870477136789",
            "subnet_ids": [
              "subnet-0116ef966176867c7",
              "subnet-025ae5c4e7827e874",
              "subnet-09ccd5445254f3e4b"
            ],
            "tags": {
              "Name": "eks-vpc-default",
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "eks-vpc-default",
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "vpc_id": "vpc-0c422b619593ce42b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:870477136789:route-table/rtb-0e57c4854c27867c7",
            "default_route_table_id": "rtb-0e57c4854c27867c7",
            "id": "rtb-0e57c4854c27867c7",
            "owner_id": "870477136789",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "eks-vpc-default",
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "eks-vpc-default",
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0c422b619593ce42b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:870477136789:security-group/sg-074a69be38014d321",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-074a69be38014d321",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "870477136789",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-vpc-default",
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "eks-vpc-default",
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "vpc_id": "vpc-0c422b619593ce42b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ca1c60eeffa45654",
            "arn": "arn:aws:ec2:eu-central-1:870477136789:elastic-ip/eipalloc-0ca1c60eeffa45654",
            "domain": "vpc",
            "id": "eipalloc-0ca1c60eeffa45654",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-18-198-32-58.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.198.32.58",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-vpc-eu-central-1a",
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "eks-vpc-eu-central-1a",
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks-vpc.aws_internet_gateway.this",
            "module.eks-vpc.aws_vpc.this",
            "module.eks-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:870477136789:internet-gateway/igw-0bc316463440ff103",
            "id": "igw-0bc316463440ff103",
            "owner_id": "870477136789",
            "tags": {
              "Name": "eks-vpc",
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "eks-vpc",
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "vpc_id": "vpc-0c422b619593ce42b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this",
            "module.eks-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ca1c60eeffa45654",
            "association_id": "eipassoc-01a3292d954bcc162",
            "connectivity_type": "public",
            "id": "nat-07dc013081b21a612",
            "network_interface_id": "eni-0778c4a1efd1fbb66",
            "private_ip": "10.10.10.118",
            "public_ip": "18.198.32.58",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-025ae5c4e7827e874",
            "tags": {
              "Name": "eks-vpc-eu-central-1a",
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "eks-vpc-eu-central-1a",
              "kubernetes": "eks-cluster",
              "terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks-vpc.aws_eip.nat",
            "module.eks-vpc.aws_internet_gateway.this",
            "module.eks-vpc.aws_subnet.public",
            "module.eks-vpc.aws_vpc.this",
            "module.eks-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ecf24233690dd88f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07dc013081b21a612",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ecf24233690dd88f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks-vpc.aws_eip.nat",
            "module.eks-vpc.aws_internet_gateway.this",
            "module.eks-vpc.aws_nat_gateway.this",
            "module.eks-vpc.aws_route_table.private",
            "module.eks-vpc.aws_subnet.public",
            "module.eks-vpc.aws_vpc.this",
            "module.eks-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bc316463440ff103",
            "id": "r-rtb-04e45db12075b70d61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04e45db12075b70d6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks-vpc.aws_internet_gateway.this",
            "module.eks-vpc.aws_route_table.public",
            "module.eks-vpc.aws_vpc.this",
            "module.eks-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:870477136789:route-table/rtb-0ecf24233690dd88f",
            "id": "rtb-0ecf24233690dd88f",
            "owner_id": "870477136789",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-vpc-private",
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "eks-vpc-private",
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c422b619593ce42b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks-vpc.aws_vpc.this",
            "module.eks-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:870477136789:route-table/rtb-04e45db12075b70d6",
            "id": "rtb-04e45db12075b70d6",
            "owner_id": "870477136789",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-vpc-public",
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "eks-vpc-public",
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c422b619593ce42b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks-vpc.aws_vpc.this",
            "module.eks-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b947053118b96e0f",
            "route_table_id": "rtb-0ecf24233690dd88f",
            "subnet_id": "subnet-0116ef966176867c7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks-vpc.aws_route_table.private",
            "module.eks-vpc.aws_subnet.private",
            "module.eks-vpc.aws_vpc.this",
            "module.eks-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a8df43d58960b44",
            "route_table_id": "rtb-0ecf24233690dd88f",
            "subnet_id": "subnet-09ccd5445254f3e4b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks-vpc.aws_route_table.private",
            "module.eks-vpc.aws_subnet.private",
            "module.eks-vpc.aws_vpc.this",
            "module.eks-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f408890f4c119f2",
            "route_table_id": "rtb-04e45db12075b70d6",
            "subnet_id": "subnet-025ae5c4e7827e874"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks-vpc.aws_route_table.public",
            "module.eks-vpc.aws_subnet.public",
            "module.eks-vpc.aws_vpc.this",
            "module.eks-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b2b6770cc5093ad",
            "route_table_id": "rtb-04e45db12075b70d6",
            "subnet_id": "subnet-0ea17bf0ce811f5e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks-vpc.aws_route_table.public",
            "module.eks-vpc.aws_subnet.public",
            "module.eks-vpc.aws_vpc.this",
            "module.eks-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:870477136789:subnet/subnet-0116ef966176867c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.110.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0116ef966176867c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "870477136789",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-vpc-private-eu-central-1a",
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "eks-vpc-private-eu-central-1a",
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "vpc_id": "vpc-0c422b619593ce42b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks-vpc.aws_vpc.this",
            "module.eks-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:870477136789:subnet/subnet-09ccd5445254f3e4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.120.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ccd5445254f3e4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "870477136789",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-vpc-private-eu-central-1b",
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "eks-vpc-private-eu-central-1b",
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "vpc_id": "vpc-0c422b619593ce42b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks-vpc.aws_vpc.this",
            "module.eks-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:870477136789:subnet/subnet-025ae5c4e7827e874",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025ae5c4e7827e874",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "870477136789",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-vpc-public-eu-central-1a",
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "eks-vpc-public-eu-central-1a",
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "vpc_id": "vpc-0c422b619593ce42b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks-vpc.aws_vpc.this",
            "module.eks-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:870477136789:subnet/subnet-0ea17bf0ce811f5e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea17bf0ce811f5e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "870477136789",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-vpc-public-eu-central-1b",
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "eks-vpc-public-eu-central-1b",
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "vpc_id": "vpc-0c422b619593ce42b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks-vpc.aws_vpc.this",
            "module.eks-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:870477136789:vpc/vpc-0c422b619593ce42b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-04f62e56a711cb07d",
            "default_route_table_id": "rtb-0e57c4854c27867c7",
            "default_security_group_id": "sg-074a69be38014d321",
            "dhcp_options_id": "dopt-0ba3e7564a4eb7e3b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c422b619593ce42b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e57c4854c27867c7",
            "owner_id": "870477136789",
            "tags": {
              "Name": "eks-vpc",
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "eks-vpc",
              "kubernetes": "eks-cluster",
              "terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}